all but footer, in process

--- a/index.html
+++ b/index.html
@@ -39,20 +39,23 @@
                             <div class="col-sm-12  col-lg-6 order-1 body-content d-flex justify-content-between"> <!--Pink-->
                                 <div class ='row'>
                                 <h4 class="subtitle white-text">Supa dupa smart catchy sub title</h4> <!--Purple-->
-                                <div class="col empty-div-header min-height-20%"></div>
-                            <div class="row middle-text no-gutters "> <!--Black-->
-                                <div class="col-7 "><h3>What you learn from this white paper</h3></div>
-                                <p>Countries within the Asia Pacific region have rapidly become one of the biggest drivers of e-Commerce growth, accounting for $1.365 trillion of the $2.352 trillion global e-Comerce turn over in 2017. By 2021, the region's market share is predicted to reach $3.001 trillion</p>
-                                <p>Applying our extensive market expertise to assist business looking to expand into Asia-pacific region, payment service provider and acquier ECCOMPAY has complied a comprehensive analysis of the local business landscape.</p>
-                                <div class="col bullet-points">
-                                <ul>
-                                    <li>Access each individual country's market conditions</li>
-                                    <li>Gain insights into consumer behavior and payment preferences</li>
-                                    <li>Understand the key differences between doinf business in Asia-Pacific and the EU</li>
-                                </ul>
-                            </div>
-                                <p>Capitalize on the region's potentioal by tailoring your expansion strategy to the indifidual consumer requirments of your targeted territories. </p>
-                            </div>
+                                
+                            <div class="row middle-text no-gutters align-items-end h-auto"> <!--Black-->
+                                
+                                <div class="col-7  ">
+                                    <h3>What you learn from this white paper</h3>
+                                </div>
+                                    <p>Countries within the Asia Pacific region have rapidly become one of the biggest drivers of e-Commerce growth, accounting for $1.365 trillion of the $2.352 trillion global e-Comerce turn over in 2017. By 2021, the region's market share is predicted to reach $3.001 trillion</p>
+                                    <p>Applying our extensive market expertise to assist business looking to expand into Asia-pacific region, payment service provider and acquier ECCOMPAY has complied a comprehensive analysis of the local business landscape.</p>
+                                    <div class="col bullet-points">
+                                        <ul>
+                                            <li> Access each individual country's market conditions</li>
+                                            <li> Gain insights into consumer behavior and payment preferences</li>
+                                            <li> Understand the key differences between doinf business in Asia-Pacific and the EU</li>
+                                        </ul>
+                                    </div>
+                                    <p>Capitalize on the region's potentioal by tailoring your expansion strategy to the indifidual consumer requirments of your targeted territories. </p>
+                                </div>
                             </div>
                         </div>
                             <div class="col-lg-6 col-sm-12 order-2 body-content">
